--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="color_edittext_hint">#9A9A9A</color>
     <color name="color_edittext_text">#000000</color>
     <color name="colorGray716569">#716569</color>
+    <color name="colorGreen46B74F">#46B74F</color>
     <color name="colorPinkDC3556">#DC3556</color>
     <color name="color070707">#070707</color>
     <color name="colorB3B3B3">#B3B3B3</color>
