--- a/app/src/main/res/drawable/bg_round_pink.xml
+++ b/app/src/main/res/drawable/bg_round_pink.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPinkDC3556"/>
+    <solid android:color="@color/colorGreen46B74F"/>
     <corners android:radius="@dimen/dp_100"/>
 </shape>
