--- a/app/src/main/res/drawable/bg_search_icon.xml
+++ b/app/src/main/res/drawable/bg_search_icon.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPinkDC3556"/>
+    <solid android:color="@color/colorGreen46B74F"/>
     <corners
         android:bottomRightRadius="@dimen/dp_15"
         android:topRightRadius="@dimen/dp_15"/>
     <stroke
         android:width="1dp"
-        android:color="@color/colorPinkDC3556"/>
+        android:color="@color/colorGreen46B74F"/>
 </shape>
