--- a/app/src/main/res/drawable/bg_search_text_field.xml
+++ b/app/src/main/res/drawable/bg_search_text_field.xml
@@ -4,5 +4,5 @@
     <corners android:radius="@dimen/dp_15"/>
     <stroke
         android:width="1dp"
-        android:color="@color/colorPinkDC3556"/>
+        android:color="@color/colorGreen46B74F"/>
 </shape>
