--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -41,28 +41,18 @@
         app:layout_constraintTop_toBottomOf="@id/llToolBar"
         app:shapeAppearance="@style/ImageCorner_12"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/llCamera"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/ivCamera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_round_pink"
         android:padding="@dimen/dp_7"
         android:layout_marginEnd="-10dp"
         android:layout_marginBottom="-10dp"
+        android:src="@drawable/ic_camera"
         app:layout_constraintEnd_toEndOf="@+id/ivProfile"
         app:layout_constraintBottom_toBottomOf="@+id/ivProfile">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/ivCamera"
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
-            android:src="@drawable/ic_camera"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.imageview.ShapeableImageView>
 
     <com.basalbody.app.utils.BasalTextField
         android:id="@+id/etFullName"
