--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -61,7 +61,7 @@
             android:id="@+id/imgSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPinkDC3556"
+            android:background="@color/colorGreen46B74F"
             android:src="@drawable/ic_search"
             app:contentPadding="@dimen/dp_15"
             app:layout_constraintBottom_toBottomOf="parent"
