--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,5 +40,6 @@
     <color name="colorText_263238">#263238</color>
     <color name="colorText_4B4B4B">#4B4B4B</color>
     <color name="colorText_989898">#989898</color>
+    <color name="colorText_309C34">#309C34</color>
     <color name="colorText_DC3556">#DC3556</color>
 </resources>
