--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,11 +13,12 @@
         android:layout_height="@dimen/dp_0"
         app:layout_constraintDimensionRatio="H, 1:1"
         android:src="@drawable/ic_splash"
-        android:layout_marginHorizontal="@dimen/dp_40"
-        android:layout_marginTop="@dimen/dp_110"
+        android:layout_marginHorizontal="@dimen/dp_24"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tvTitle"/>
 
     <!-- First Text below Image -->
     <com.basalbody.app.utils.BasalTextView
@@ -33,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@id/ivIntro"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
         android:layout_marginTop="@dimen/dp_40"/>
 
     <!-- Second Text below First Text -->
@@ -47,6 +49,7 @@
         android:gravity="center"
         android:layout_marginHorizontal="@dimen/dp_40"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
