--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -16,6 +16,11 @@
         android:icon="@drawable/ic_calendar"
         android:title="@string/item_calendar"/>
     <item
+        android:id="@+id/itemInsights"
+        android:enabled="true"
+        android:icon="@drawable/ic_insights"
+        android:title="@string/item_insights"/>
+    <item
         android:id="@+id/itemProfile"
         android:enabled="true"
         android:icon="@drawable/ic_profile"
