--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -106,7 +106,7 @@
                 android:layout_height="0dp"
                 android:layout_marginEnd="@dimen/dp_21"
                 android:background="@drawable/bg_rounded_corners_12"
-                android:backgroundTint="#4DB94E"
+                android:backgroundTint="@color/colorfbddf9"
                 android:padding="@dimen/dp_9"
                 app:layout_constraintBottom_toBottomOf="@id/clLastActivityLogged"
                 app:layout_constraintEnd_toStartOf="@id/clLastActivityLogged"
@@ -120,7 +120,7 @@
                     android:layout_marginTop="@dimen/dp_8"
                     android:gravity="center"
                     android:text="@string/label_latest_temperature_reading"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/sp_15"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +134,7 @@
                     android:layout_marginTop="@dimen/dp_9"
                     android:gravity="center"
                     android:text="36.5°C"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/sp_18"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_14"
                 android:background="@drawable/bg_rounded_corners_12"
-                android:backgroundTint="#4DB94E"
+                android:backgroundTint="#DBE5FB"
                 android:padding="@dimen/dp_9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/clLatestTemp"
@@ -162,7 +162,7 @@
                     android:layout_marginTop="@dimen/dp_8"
                     android:gravity="center"
                     android:text="@string/label_last_activity_logged"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/sp_15"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +177,7 @@
                     android:layout_marginBottom="@dimen/dp_11"
                     android:gravity="center"
                     android:text="@string/menstruation_nday_2"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/sp_18"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -343,7 +343,7 @@
                         android:paddingHorizontal="@dimen/dp_12"
                         android:paddingVertical="@dimen/dp_5"
                         android:text="No"
-                        android:textColor="@color/colorPinkDC3556"
+                        android:textColor="@color/color569ebf"
                         android:textSize="@dimen/sp_12"
                         app:textStyle="normal" />
 
