--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,8 @@
     <color name="colorText_4B4B4B">#4B4B4B</color>
     <color name="colorText_989898">#989898</color>
     <color name="colorText_DC3556">#DC3556</color>
+    <color name="color569ebf">#569EBF</color>
+    <color name="colorfbddf9">#FBDDF9</color>
+    <color name="color_1e293b">#1E293B</color>
+    <color name="color797979">#797979</color>
 </resources>
