--- a/app/src/main/res/drawable/bg_notification_view_background.xml
+++ b/app/src/main/res/drawable/bg_notification_view_background.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
-    <corners android:radius="@dimen/dp_12"/>
+    <corners android:topLeftRadius="@dimen/dp_13"
+        android:bottomLeftRadius="@dimen/dp_13"/>
+    <solid android:color="#ff0000"/>
 </shape>
