--- a/app/src/main/res/drawable/bg_rounded_corners_gradient.xml
+++ b/app/src/main/res/drawable/bg_rounded_corners_gradient.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#C3F4C4"/>
     <corners android:radius="@dimen/dp_50"/>
+    <gradient android:startColor="#46B74F"
+        android:endColor="#7AC642"
+        android:angle="270"/>
 </shape>
