--- a/app/src/main/res/drawable/bg_today_temperature_trend_activity.xml
+++ b/app/src/main/res/drawable/bg_today_temperature_trend_activity.xml
@@ -9,7 +9,7 @@
 
     <item android:left="@dimen/dp_2" android:top="@dimen/dp_0" android:right="@dimen/dp_0" android:bottom="@dimen/dp_0">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff"/>
+            <solid android:color="#C0EBFF"/>
             <corners android:radius="@dimen/dp_12"/>
         </shape>
     </item>
