--- a/app/src/main/res/drawable/ic_radio_unselected.xml
+++ b/app/src/main/res/drawable/ic_radio_unselected.xml
@@ -1,4 +1,5 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="20dp"
     android:height="21dp"
     android:viewportWidth="20"
@@ -6,6 +7,17 @@
   <path
       android:strokeWidth="1"
       android:pathData="M10,10.5m-9.5,0a9.5,9.5 0,1 1,19 0a9.5,9.5 0,1 1,-19 0"
-      android:fillColor="#00000000"
-      android:strokeColor="#DC3556"/>
+      android:fillColor="#00000000">
+    <aapt:attr name="android:strokeColor">
+      <gradient
+          android:startX="10"
+          android:startY="0.5"
+          android:endX="10"
+          android:endY="20.5"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF46B74F"/>
+        <item android:offset="1" android:color="#FF7AC642"/>
+      </gradient>
+    </aapt:attr>
+  </path>
 </vector>
