--- a/app/src/main/res/layout/activity_add_new_activity.xml
+++ b/app/src/main/res/layout/activity_add_new_activity.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
         android:background="@drawable/bg_radio_button"
+        android:elevation="@dimen/dp_5"
         android:padding="@dimen/dp_10"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/toolBar">
@@ -69,6 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_15"
         android:background="@drawable/bg_radio_button"
+        android:elevation="@dimen/dp_5"
         android:padding="@dimen/dp_10"
         app:layout_constraintBottom_toBottomOf="@id/rbMenstruation"
         app:layout_constraintStart_toEndOf="@id/rbMenstruation"
@@ -97,11 +99,56 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/llAnswer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="@dimen/dp_50"
+        android:layout_marginTop="@dimen/dp_22"
+        app:cardElevation="@dimen/dp_5"
+        app:contentPadding="@dimen/dp_2"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/rbMenstruation">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:orientation="horizontal">
+
+            <com.basalbody.app.utils.BasalTextView
+                android:id="@+id/btnYes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_rounded_corners_gradient"
+                android:paddingHorizontal="@dimen/dp_12"
+                android:paddingVertical="@dimen/dp_5"
+                android:text="Yes"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_12"
+                app:textStyle="normal" />
+
+            <com.basalbody.app.utils.BasalTextView
+                android:id="@+id/btnNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_rounded_corners"
+                android:paddingHorizontal="@dimen/dp_12"
+                android:paddingVertical="@dimen/dp_5"
+                android:text="No"
+                android:textColor="#46B74F"
+                android:textSize="@dimen/sp_12"
+                app:textStyle="normal" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
     <com.basalbody.app.utils.BasalTextField
         android:id="@+id/etTemperature"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_20"
         app:btf_drawableStart="@drawable/ic_temperature"
         app:btf_hint="@string/hint_enter_temperature"
         app:btf_inputType="numberDecimal"
@@ -109,7 +156,7 @@
         app:btf_maxLength="5"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
-        app:layout_constraintTop_toBottomOf="@id/rbMenstruation" />
+        app:layout_constraintTop_toBottomOf="@id/llAnswer" />
 
     <com.basalbody.app.utils.BasalTextField
         android:id="@+id/etDate"
@@ -158,7 +205,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvLabelDate" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnBack"
+        android:id="@+id/btnAdd"
         style="@style/FilledButtonTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -167,7 +214,7 @@
         android:paddingHorizontal="@dimen/dp_20"
         android:paddingVertical="@dimen/dp_10"
         android:text="@string/btn_add"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/sp_15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
