--- a/app/src/main/res/layout/activity_connected_device.xml
+++ b/app/src/main/res/layout/activity_connected_device.xml
@@ -73,17 +73,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_22"
         android:background="@drawable/bg_connected_device_view"
-        android:padding="@dimen/dp_25"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/btnScanForDevices"
         app:layout_goneMarginTop="@dimen/dp_30">
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_connected_device_design"
+            android:scaleType="centerCrop"/>
+
         <com.basalbody.app.utils.BasalTextView
             android:id="@+id/tvLabelConnectionStatus"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginTop="@dimen/dp_31"
             android:gravity="center"
             android:text="@string/label_connection_status"
             android:textColor="@color/black"
@@ -129,6 +138,9 @@
             android:drawableStart="@drawable/ic_green_dot"
             android:drawablePadding="@dimen/dp_6"
             android:gravity="center"
+            android:background="@drawable/bg_rounded_corners_12"
+            android:paddingHorizontal="@dimen/dp_10"
+            android:paddingVertical="@dimen/dp_8"
             android:text="@string/label_connected"
             android:textColor="@color/black"
             android:textSize="@dimen/sp_18"
@@ -143,12 +155,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_30"
-            android:layout_marginBottom="@dimen/dp_5"
+            android:layout_marginBottom="@dimen/dp_27"
             android:fontFamily="@font/geist_regular"
-            android:paddingHorizontal="@dimen/dp_10"
-            android:paddingVertical="@dimen/dp_5"
+            android:paddingHorizontal="@dimen/dp_20"
+            android:paddingVertical="@dimen/dp_10"
             android:text="@string/btn_disconnect"
-            android:textColor="@color/black"
             android:textSize="@dimen/sp_15"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -156,5 +167,95 @@
             app:layout_constraintTop_toBottomOf="@id/tvConnectionStatus" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.basalbody.app.utils.BasalTextView
+        android:id="@+id/tvLabelFoundedDevices"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_30"
+        android:text="@string/label_founded_devices"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sp_18"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/btnScanForDevices"
+        app:textStyle="semiBold" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvNoDevicesFound"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_25"
+        app:cardCornerRadius="@dimen/dp_21"
+        android:visibility="gone"
+        app:cardElevation="@dimen/dp_5"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/tvLabelFoundedDevices">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_10">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgSad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_sad"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.basalbody.app.utils.BasalTextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_17"
+                android:text="@string/label_sorry"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_21"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imgSad"
+                app:textStyle="bold" />
+
+            <com.basalbody.app.utils.BasalTextView
+                android:id="@+id/tvDescription"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_6"
+                android:layout_marginBottom="@dimen/dp_9"
+                android:text="@string/label_no_devices_found"
+                android:textAlignment="center"
+                android:textColor="@color/color797979"
+                android:gravity="center"
+                android:textSize="@dimen/sp_16"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvTitle"
+                app:textStyle="normal" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFoundedDevices"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/dp_15"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/dp_9"
+        android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/tvLabelFoundedDevices"
+        tools:itemCount="3"
+        tools:listitem="@layout/each_row_available_bluetooth_devices" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
