--- a/app/src/main/res/layout/activity_details_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/activity_details_bottom_sheet_dialog.xml
@@ -87,7 +87,7 @@
         android:paddingHorizontal="@dimen/dp_10"
         android:paddingVertical="@dimen/dp_10"
         android:text="@string/btn_back"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/sp_15"
         android:layout_marginBottom="@dimen/dp_12"
         app:layout_constraintStart_toStartOf="parent"
