--- a/app/src/main/res/layout/device_disconnected_dialog.xml
+++ b/app/src/main/res/layout/device_disconnected_dialog.xml
@@ -3,35 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/dp_5">
+    android:background="@drawable/bg_rounded_corners_20"
+    android:paddingHorizontal="@dimen/dp_32"
+    android:paddingVertical="@dimen/dp_8">
 
     <com.basalbody.app.utils.BasalTextView
-        android:id="@+id/tvDate"
-        android:layout_width="match_parent"
+        android:id="@+id/tvTitle"
+        android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:lineHeight="@dimen/dp_26"
-        android:text="22"
-        android:textColor="@color/color_1e293b"
-        android:textSize="@dimen/sp_18"
+        android:text="Oops! The battery is dead."
+        android:textColor="#FF0000"
+        android:textSize="@dimen/sp_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:textStyle="semiBold" />
+        app:textStyle="bold" />
 
     <com.basalbody.app.utils.BasalTextView
-        android:id="@+id/tvWeekDay"
-        android:layout_width="match_parent"
+        android:id="@+id/tvMessage"
+        android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_2"
+        android:layout_marginTop="@dimen/dp_8"
         android:gravity="center"
-        android:lineHeight="@dimen/dp_26"
-        android:text="Wed"
-        android:textColor="@color/color_1e293b"
+        android:text="Please charge it and try connecting again."
+        android:textColor="@color/black"
         android:textSize="@dimen/sp_14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvDate"
-        app:textStyle="medium" />
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:textStyle="normal" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
