--- a/app/src/main/res/drawable/bg_swipe_to_delete_item.xml
+++ b/app/src/main/res/drawable/bg_swipe_to_delete_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FF0000"/>
-    <corners android:topLeftRadius="@dimen/dp_13"
-        android:bottomLeftRadius="@dimen/dp_13"/>
+    <corners android:bottomRightRadius="@dimen/dp_12"
+        android:topRightRadius="@dimen/dp_12"/>
 </shape>
