--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -33,8 +33,9 @@
         android:layout_height="@dimen/dp_0"
         android:fillViewport="true"
         android:layout_marginTop="@dimen/dp_14"
-        app:layout_constraintEnd_toEndOf="@id/glEnd"
-        app:layout_constraintStart_toStartOf="@id/glStart"
+        android:overScrollMode="never"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolBar"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -50,6 +51,7 @@
                 android:text="@string/your_predicted_fertile_window"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sp_18"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -61,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_14"
                 app:cardBackgroundColor="#5EC798"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 app:cardCornerRadius="@dimen/dp_15"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -115,6 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_20"
                 app:cardCornerRadius="@dimen/dp_16"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 app:cardElevation="@dimen/dp_5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -156,6 +160,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/dp_16"
                 app:cardElevation="@dimen/dp_5"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_20"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
