--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,7 +36,7 @@
         android:src="@drawable/ic_dummy_user"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/llToolBar"
-        app:shapeAppearance="@style/ImageCorner_12" />
+        app:shapeAppearance="@style/Corners12dp" />
 
     <com.basalbody.app.utils.BasalTextView
         android:id="@+id/tvUserName"
@@ -77,7 +77,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintTop_toTopOf="@+id/ivProfile"
-        app:shapeAppearance="@style/ImageCorner_12" />
+        app:shapeAppearance="@style/Corners12dp" />
 
     <View
         android:id="@+id/viewLine"
