--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -35,6 +35,10 @@
         android:layout_width="@dimen/dp_98"
         android:layout_height="@dimen/dp_98"
         android:layout_marginTop="@dimen/dp_25"
+        app:strokeWidth="@dimen/dp_1"
+        android:padding="0.5dp"
+        app:strokeColor="@color/colorPrimary"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_dummy_user"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
