--- a/app/src/main/res/layout/bottom_sheet_image_picker_new_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_image_picker_new_layout.xml
@@ -8,19 +8,28 @@
     android:background="@drawable/bottom_sheet_bg"
     android:padding="@dimen/dp_18">
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="@dimen/dp_60"
+        android:layout_height="@dimen/dp_11"
+        android:background="@drawable/bottom_sheet_top_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.basalbody.app.utils.BasalTextView
         android:id="@+id/textViewTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dp_18"
-        android:layout_marginTop="@dimen/dp_8"
+        android:layout_marginTop="@dimen/dp_18"
         android:gravity="center"
         tools:text="Choose Option to Upload"
         android:textColor="@color/colorSecondary"
         android:textSize="@dimen/sp_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view"
         app:textStyle="bold" />
 
     <View
