--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,6 +33,10 @@
         android:layout_width="@dimen/dp_66"
         android:layout_height="@dimen/dp_66"
         android:layout_marginTop="@dimen/dp_15"
+        app:strokeWidth="@dimen/dp_1"
+        android:padding="0.5dp"
+        app:strokeColor="@color/colorPrimary"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_dummy_user"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/llToolBar"
