--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="black2">#1C1C1C</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#EB4755</color>
-    <color name="colorPrimary">#FFBBCE</color>
+    <color name="colorPrimary">#46B74F</color>
     <color name="colorButtonText">#303030</color>
     <color name="color_bg_edittext">#716569</color>
     <color name="colorDivider">#9A9A9A</color>
