--- a/app/src/main/res/layout/activity_contact_support.xml
+++ b/app/src/main/res/layout/activity_contact_support.xml
@@ -82,6 +82,7 @@
         android:hint="@string/hint_enter_your_comment_here"
         android:inputType="textMultiLine"
         android:minLines="7"
+        android:textCursorDrawable="@drawable/cursor"
         android:padding="@dimen/dp_17"
         android:textColor="@color/color_edittext_text"
         android:textColorHint="@color/color_edittext_hint"
