--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -35,8 +35,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/dp_15"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/glEnd"
-        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolBar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -47,6 +47,7 @@
                 android:id="@+id/cvCalendar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 android:elevation="@dimen/dp_5"
                 app:cardCornerRadius="@dimen/dp_15"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -119,6 +120,7 @@
                 android:id="@+id/imgDotMenstruation"
                 android:layout_width="@dimen/dp_15"
                 android:layout_height="@dimen/dp_15"
+                android:layout_marginStart="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_10"
                 android:src="@drawable/ic_dot_menstruation"
                 app:layout_constraintEnd_toStartOf="@id/tvLabelMenstruation"
@@ -179,6 +181,7 @@
                 android:id="@+id/tvLabelTemperatureTrend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/dp_24"
                 android:text="@string/label_temperature_trend"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sp_12"
@@ -191,6 +194,7 @@
                 android:id="@+id/tvToday"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_30"
                 android:text="@string/label_today"
                 android:textColor="@color/black"
@@ -204,8 +208,9 @@
                 android:id="@+id/rvTodaysActivity"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_15"
+                android:nestedScrollingEnabled="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
