--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -31,27 +31,27 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="@dimen/dp_0"
         android:layout_height="@dimen/dp_0"
-        android:fillViewport="true"
         android:layout_marginTop="@dimen/dp_14"
+        android:fillViewport="true"
         android:overScrollMode="never"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolBar"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/toolBar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/dp_30">
+            android:paddingBottom="@dimen/dp_10">
 
             <com.basalbody.app.utils.BasalTextView
                 android:id="@+id/tvLabel"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 android:text="@string/your_predicted_fertile_window"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sp_18"
-                android:layout_marginHorizontal="@dimen/dp_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -61,9 +61,9 @@
                 android:id="@+id/cvDate"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_14"
                 app:cardBackgroundColor="#5EC798"
-                android:layout_marginHorizontal="@dimen/dp_24"
                 app:cardCornerRadius="@dimen/dp_15"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -116,9 +116,9 @@
                 android:id="@+id/cvChart"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/dp_24"
                 android:layout_marginTop="@dimen/dp_20"
                 app:cardCornerRadius="@dimen/dp_16"
-                android:layout_marginHorizontal="@dimen/dp_24"
                 app:cardElevation="@dimen/dp_5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +148,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvTemperatureTrends"/>
+                        app:layout_constraintTop_toBottomOf="@+id/tvTemperatureTrends" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -158,10 +158,11 @@
                 android:id="@+id/cvCycleRegularityInsights"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/dp_24"
+                android:layout_marginVertical="@dimen/dp_20"
                 app:cardCornerRadius="@dimen/dp_16"
                 app:cardElevation="@dimen/dp_5"
-                android:layout_marginHorizontal="@dimen/dp_24"
-                android:layout_marginTop="@dimen/dp_20"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cvChart">
